fix scrollbar

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -8,7 +8,10 @@
   width: 100%;
   margin: 0;
   border-left: 1px solid $classicred;
-  padding-left: 35px;
+  padding-left: 30px;
+  padding-right: 30px;
+  overflow-y: scroll;
+  height: 800px;
 }
 
 .current-user-custom-row{
